# red

./: .gitignore  Cargo.toml  Justfile  README.md
examples/: count_words.str
src/: buildins.rs  csv.rs  eval.rs  lib.rs  logfmt.rs  main.rs  program.rs  reader.rs  tests.rs
src/parser/: code_reader.rs  mod.rs  parser.rs  tokenizer.rs
src/types/: array.rs  ast.rs  data.rs  map.rs  mod.rs  number.rs  operator.rs  regex.rs  template.rs
