[package]
name = "red"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
color-print = "0.3.7"
indexmap = { version = "2.12.1", features = ["serde"] }
ordered-float = "5.1.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unescape = "0.1.0"

[dev-dependencies]
test-case = "3.3.1"
